--- a/dummy_flask_app/templates/hello.html
+++ b/dummy_flask_app/templates/hello.html
@@ -2,15 +2,15 @@
 <html>
     <head>
         <title>My Flask App Page</title>
-    </head> 
+    </head>
     <body>
-        <h1>Hello World!</h1>
-        <p>This is a live application on the internet!</p>
+        <h1>Hello!</h1>
+        <p>Welcome to the internet!</p>
         <ul>ToDo:
         	<li>Get app on internet</li>
         	<li>Try to rename it</li>
 		<li>Testing commit 1</li>
         </ul>
-        
+
     </body>
 </html>
